changed background image

--- a/portfolio.html
+++ b/portfolio.html
@@ -32,6 +32,14 @@
                 </ul>
              </div>
                 <div class="contact">
+                    <div class="cass">
+            <div class="int">
+<h2 contenteditable="true">HI</h2>
+<h3 contenteditable="true">MY NAME IS</h3>
+<h2 contenteditable="true">KARUNA BARUWAL</h2>
+<h3 contenteditable="true">AND I'M STUDENT</h3>
+            </div>
+        </div>
                     <div class="med">
                         <div class="poj">
                             <div class="hello active">
