--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,7 @@
     <head>
         <title>BLACK || LOVE  ||  CONTACT</title>
         <link rel="stylesheet" href="index.css">
+        <link rel="stylesheet" href="contact.css">
         <!--font-->
         <link href="https://fonts.googleapis.com/css2?family=Nanum+Myeongjo:wght@400;700&display=swap" rel="stylesheet">
         <!--hamburger-->
@@ -88,7 +89,7 @@
                         <input type="password" name="password">
                     </div>
                     <div class="hi">
-                        <button type="submit" name="" value="Send">
+                        <button type="submit" name="" value="Send">Submit</button>
                     </div>
                 </form>
             </div>  
