--- a/index.html
+++ b/index.html
@@ -2,16 +2,17 @@
 <html lang="en">
     <head>
         <title>BLACK || LOVE  || HOME</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="index.css">
         <!--font-->
         <link href="https://fonts.googleapis.com/css2?family=Nanum+Myeongjo:wght@400;700&display=swap" rel="stylesheet">
         <!--hamburger-->
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" >
     </head>
     <body class="body">
         <!--logo-->
         <div class="log">
-            <img src="KARUNA.jpg" alt="">
+            <img src="KARUNA.jpg" alt="logo">
         </div>
         <!--hamburger-->
         <div class="ham">
@@ -31,10 +32,10 @@
                 </ul>
              </div>
         </div>
-        <div class="card">
+        <div class="camp">
             <div class="intro">
-<h2>HI</h2>
-<p>It's me.</p>
+<h2 contenteditable="true">WELCOME TO OUR WEBSITE</h2>
+<h3 contenteditable="true">A WEB DEVELOPER</h3>
             </div>
         </div>
         
