--- a/contact.html
+++ b/contact.html
@@ -38,41 +38,7 @@
                     <h2>CONTACT US</h2>
                  <p>Feel free to contact us.</p>
                 </div>
-                <div class="contfom">
-                    <div class="continfo">
-                        <div class="boxi">
-                            <div class="iconic"><span class="material-symbols-outlined">
-                                pin_drop
-                                </span></div>
-                           <div class="texas">
-                               <h3>Address</h3>
-                              <p>Sitapila,<br>Bhimdhunga,abc,<br>8</p>
-                           </div>
-                       </div>
-                       <div class="boxi">
-                           <div class="iconic">
-                            <span class="material-symbols-outlined">
-                                   call
-                            </span>
-                        </div>
-                           <div class="texas">
-                           <h3>Phone </h3>
-                           <p>9851607854</p>
-                           </div>
-                       </div>
-                       <div class="boxi">
-                           <div class="iconic">
-                            <span class="material-symbols-outlined">
-                                mail
-                                </span>
-                           </div>
-                           <div class="texas">
-                              <h3>Email</h3>
-                              <p>aakant54@gmail.com</p>
-                          </div>
-                       </div>
-                    </div>  
-                </div>
+                
              </section>
              <div class="formm">
                 <form>
@@ -92,7 +58,50 @@
                         <button type="submit" name="" value="Send">Submit</button>
                     </div>
                 </form>
-            </div>  
+            </div> 
+            <footer>
+                <div class="legs">
+                    <div class="me">
+                        <p>Karuna Baruwal </br>Std.id=23834875</p>
+                    </div>
+                    <div class="face">
+                        <div class="contfom">
+                            <div class="continfo">
+                                <div class="boxi">
+                                    <div class="iconic"><span class="material-symbols-outlined">
+                                        pin_drop
+                                        </span></div>
+                                   <div class="texas">
+                                       <h3>Address</h3>
+                                      <p>Sitapila,<br>Bhimdhunga,abc,<br>8</p>
+                                   </div>
+                               </div>
+                               <div class="boxi">
+                                   <div class="iconic">
+                                    <span class="material-symbols-outlined">
+                                           call
+                                    </span>
+                                </div>
+                                   <div class="texas">
+                                   <h3>Phone </h3>
+                                   <p>9851607854</p>
+                                   </div>
+                               </div>
+                               <div class="boxi">
+                                   <div class="iconic">
+                                    <span class="material-symbols-outlined">
+                                        mail
+                                        </span>
+                                   </div>
+                                   <div class="texas">
+                                      <h3>Email</h3>
+                                      <p>aakant54@gmail.com</p>
+                                  </div>
+                               </div>
+                            </div>  
+                        </div>
+                     </section>
+                    </div> 
              
         </div>
     </body>
