portfolio picture change

--- a/index.html
+++ b/index.html
@@ -40,39 +40,50 @@
         </div>
         <footer>
             <div class="leg">
-                <div class="me">
-                    <p>Karuna Baruwal </br>Std.id=23834875</p>
+                <div class="mes">
+                    <div>
+                        <!--navigationbar-->
+                        <div class="footnave">
+                          <ul>
+                               <a href="index.html">HOME</a>
+                               <a href="contact.html">CONTACT</a>
+                               <a href="portfolio.html">POTFOLIO</a>
+                               <a href="sitereport.html">SITEREPORT</a>
+                               <a href="workexperience.html">WORKEXPERIENCE</a>
+                            </ul>
+                        </div>
+                   </div>
                 </div>
-                <div class="face">
-                    <div class="contfom">
-                        <div class="continfo">
-                            <div class="boxi">
-                                <div class="iconic"><span class="material-symbols-outlined">
+                <div class="faces">
+                    <div class="contfoms">
+                        <div class="continfos">
+                            <div class="boxis">
+                                <div class="iconics"><span class="material-symbols-outlined">
                                     pin_drop
                                     </span></div>
-                               <div class="texas">
+                               <div class="texass">
                                    <h3>Address</h3>
                                   <p>Sitapila,<br>Bhimdhunga,abc,<br>8</p>
                                </div>
                            </div>
-                           <div class="boxi">
-                               <div class="iconic">
+                           <div class="boxis">
+                               <div class="iconics">
                                 <span class="material-symbols-outlined">
                                        call
                                 </span>
                             </div>
-                               <div class="texas">
+                               <div class="texass">
                                <h3>Phone </h3>
                                <p>9851607854</p>
                                </div>
                            </div>
-                           <div class="boxi">
-                               <div class="iconic">
+                           <div class="boxis">
+                               <div class="iconics">
                                 <span class="material-symbols-outlined">
                                     mail
                                     </span>
                                </div>
-                               <div class="texas">
+                               <div class="texass">
                                   <h3>Email</h3>
                                   <p>aakant54@gmail.com</p>
                               </div>
