--- a/portfolio.html
+++ b/portfolio.html
@@ -43,24 +43,24 @@
                     <div class="med">
                         <div class="poj">
                             <div class="hello active">
-                            <img src="pink.jpg" alt="" style=" box-align: center; height: 200px; width: 200px; margin: 20px;"
+                            <img src="abcde.jpg" alt="" style=" box-align: center; height: 270px; width: 275px; margin: 20px;"
                             >
                          </div>
                          </div> 
                          <div class="by">  
                              <div class="hello active">
-                             <img src="xyz.jpg" alt="" style=" box-align: center; height: 200px; width: 200px; margin: 20px;">
+                             <img src="fgh.jpg" alt="" style=" box-align: center; height: 270px; width: 275px; margin: 20px;">
                          </div>
                          </div> 
                          <div class="los">
                              <div class="hello active">
-                             <img src="blue.jpg" alt="" style=" box-align: center; height: 200px; width: 200px; margin: 20px;">
+                             <img src="hij.jpg" alt="" style=" box-align: center; height: 270px; width: 275px; margin: 20px;">
                              
                          </div>  
                          </div>
                          <div class="hee">
                              <div class="hello active">
-                             <img src="textu.jpg" alt="" style=" box-align: center; height: 200px; width: 200px; margin: 20px;">
+                             <img src="jkl.jpg" alt="" style=" box-align: center; height: 270px; width: 275px; margin: 20px;">
                          </div>  
                          </div>
                  </div>
