update index page

--- a/workexperience.html
+++ b/workexperience.html
@@ -32,7 +32,8 @@
                 </ul>
              </div>                     
           </div>
-          <div>
+          <div class="exp">
+            <h2>I worked as a </h2>
             
           </div>
     </body>
