--- a/index.html
+++ b/index.html
@@ -32,10 +32,17 @@
                 </ul>
              </div>
         </div>
+        <script src="ham.js"></script>
         <div class="camp">
             <div class="intro">
 <h2 contenteditable="true">WELCOME TO OUR WEBSITE</h2>
 <h3 contenteditable="true">A WEB DEVELOPER</h3>
+<h3 contenteditable="true">IF  YOU ARE CURIOUS ABOUT ME</h3>
+<h3 contenteditable="true">AND MY WORK CLICK HERE</h3>
+<div class="click active">
+    <a href="portfolio.html"> <button class="clicks ">CLICK HERE</button></a>
+    
+</div>
             </div>
         </div>
         <footer>
@@ -44,13 +51,15 @@
                     <div>
                         <!--navigationbar-->
                         <div class="footnave">
-                          <ul>
-                               <a href="index.html">HOME</a>
-                               <a href="contact.html">CONTACT</a>
-                               <a href="portfolio.html">POTFOLIO</a>
-                               <a href="sitereport.html">SITEREPORT</a>
-                               <a href="workexperience.html">WORKEXPERIENCE</a>
-                            </ul>
+                          <div class="last">
+                            <ul>
+                                <a href="index.html">HOME</a>
+                                <a href="contact.html">CONTACT</a>
+                                <a href="portfolio.html">POTFOLIO</a>
+                                <a href="sitereport.html">SITEREPORT</a>
+                                <a href="workexperience.html">WORKEXPERIENCE</a>
+                             </ul>
+                          </div>
                         </div>
                    </div>
                 </div>
