--- a/portfolio.html
+++ b/portfolio.html
@@ -66,7 +66,7 @@
                  </div>
                 </div>
                 <footer>
-                    <div class="legs">
+                    <div class="legas">
                         <div class="me">
                             
                         </div>
