--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                             <ul>
                                 <a href="index.html">HOME</a>
                                 <a href="contact.html">CONTACT</a>
-                                <a href="portfolio.html">POTFOLIO</a>
+                                <a href="portfolio.html">PORTFOLIO</a>
                                 <a href="sitereport.html">SITEREPORT</a>
                                 <a href="workexperience.html">WORKEXPERIENCE</a>
                              </ul>
@@ -99,7 +99,6 @@
                            </div>
                         </div>  
                     </div>
-                 </section>
                 </div>
                 
             </div>
