--- a/portfolio.html
+++ b/portfolio.html
@@ -26,7 +26,7 @@
                 <ul class="lis active">
                     <li><a href="index.html">HOME</a></li>
                     <li><a href="contact.html">CONTACT</a></li>
-                    <li><a href="portfolio.html">POTFOLIO</a></li>
+                    <li><a href="portfolio.html">PORTFOLIO</a></li>
                     <li><a href="sitereport.html">SITEREPORT</a></li>
                     <li><a href="workexperience.html">WORKEXPERIENCE</a></li>
                 </ul>
