--- a/sitereport.html
+++ b/sitereport.html
@@ -32,5 +32,49 @@
                 </ul>
              </div>                     
           </div>
+          <div>
+            <footer>
+                <div class="leg">
+                    <div class="faces">
+                        <div class="contfoms">
+                            <div class="continfos">
+                                <div class="boxis">
+                                    <div class="iconics"><span class="material-symbols-outlined">
+                                        pin_drop
+                                        </span></div>
+                                   <div class="texass">
+                                       <h3>Address</h3>
+                                      <p>Sitapila,<br>Bhimdhunga,abc,<br>8</p>
+                                   </div>
+                               </div>
+                               <div class="boxis">
+                                   <div class="iconics">
+                                    <span class="material-symbols-outlined">
+                                           call
+                                    </span>
+                                </div>
+                                   <div class="texass">
+                                   <h3>Phone </h3>
+                                   <p>9851607854</p>
+                                   </div>
+                               </div>
+                               <div class="boxis">
+                                   <div class="iconics">
+                                    <span class="material-symbols-outlined">
+                                        mail
+                                        </span>
+                                   </div>
+                                   <div class="texass">
+                                      <h3>Email</h3>
+                                      <p>aakant54@gmail.com</p>
+                                  </div>
+                               </div>
+                            </div>  
+                        </div>
+                    </div>
+                    
+                </div>
+            </footer>
+          </div>
     </body>
 </html>
