upadte many things

--- a/workexperience.html
+++ b/workexperience.html
@@ -12,7 +12,7 @@
     <body class="body">
         <!--logo-->
         <div class="log">
-            <img src="KARUNA.jpg" alt="">
+            <img src="KARUNA.jpg" alt="Logo">
         </div>
         <!--hamburger-->
         <div class="ham">
@@ -33,8 +33,13 @@
              </div>                     
           </div>
           <div class="exp">
-            <h2>I worked as a </h2>
-            
+            <div class="ints">
+                <h2>Experience helps a person to improve confidence and more knowledge in a different field. </br>After year twelve, I worked as a freelancer. Working with experienced people was really fun and interesting and helped me gain a lot of confidence. </br> I worked for a Charity foundation called Sahayog. It was pleasure to work with these amazing people.</br> I created a service page where people can get get knowledge about where the foundation is linked and are associated with different groups. </h2>
+                    
+            </div>
+            <div class="saha">
+                <img src="sahayog.png" width="700px" height="500px" alt="Wy work">
+            </div>
           </div>
           <footer>
             <div class="legas">
