--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,7 @@
             <div class="contam"></div>
                 <div class="cont">
                     <h2>CONTACT US</h2>
-                 <p> Feel free to leave any messege or question you have.</p>
+                 <p> Feel free to leave any messege or thoughts about  you have.</p>
                 </div>
                 
              
