--- a/workexperience.html
+++ b/workexperience.html
@@ -33,12 +33,14 @@
              </div>                     
           </div>
           <div class="exp">
+            <h2> Work Experience</h2>
             <div class="ints">
+                
                 <h2>Experience helps a person to improve confidence and more knowledge in a different field. </br>After year twelve, I worked as a freelancer. Working with experienced people was really fun and interesting and helped me gain a lot of confidence. </br> I worked for a Charity foundation called Sahayog. It was pleasure to work with these amazing people.</br> I created a service page where people can get get knowledge about where the foundation is linked and are associated with different groups. </h2>
                     
             </div>
             <div class="saha">
-                <img src="sahayog.png" width="700px" height="500px" alt="Wy work">
+                <img src="sahayog.png" width="550px" height="350px" alt="Wy work">
             </div>
           </div>
           <footer>
