--- a/portfolio.html
+++ b/portfolio.html
@@ -10,27 +10,41 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
     </head>
     <body class="body">
-        <!--logo-->
-        <div class="log">
-            <img src="KARUNA.jpg" alt="">
-        </div>
-        <!--hamburger-->
-        <div class="ham">
-            <span class="material-symbols-outlined">
-                menu
-                </span>
-        </div>
-        <div>
-             <!--navigationbar-->
-             <div class="nave">
-                <ul class="lis active">
-                    <li><a href="index.html">HOME</a></li>
-                    <li><a href="contact.html">CONTACT</a></li>
-                    <li><a href="portfolio.html">PORTFOLIO</a></li>
-                    <li><a href="sitereport.html">SITEREPORT</a></li>
-                    <li><a href="workexperience.html">WORKEXPERIENCE</a></li>
-                </ul>
-             </div>
+               <!--logo-->
+               <div class="log">
+                <img src="KARUNA.jpg" alt="logo">
+            </div>
+    
+        <input type="checkbox" id="toggle">
+    
+        <nav>
+            <label class="navbar-toggler" for="toggle">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+            </label>
+            <div>
+                 <!--navigationbar-->
+                 <div class="nave">
+                    <ul class="lis active">
+                        <li class="naves">
+                            <a class="nav-link" href="index.html">HOME</a>
+                        </li>
+                        <li class="naves">
+                            <a class="nav-link" href="portfolio.html">POTFOLIO</a>
+                        </li>
+                        <li class="naves">
+                            <a class="nav-link" href="workexperience.html">WORKEXPERIENCE</a>
+                        </li>
+                        <li class="naves">
+                            <a class="nav-link" href="sitereport.html">SITEREPORT</a>
+                        </li>
+                        <li class="naves">
+                            <a class="nav-link" href="contact.html">CONTACT</a>
+                        </li>
+                    </ul>
+                 </div>
+            </div>
                 <div class="contact">
                     <div class="cass">
             <div class="int">
