--- a/contacts.html
+++ b/contacts.html
@@ -3,7 +3,7 @@
 
 <head>
 
-     <title>BLACK || LOVE  || SITEREPORT</title>
+     <title>BLACK || LOVE  || CONTACT</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- CSS File -->
     <link rel="stylesheet" href="bro.css">
@@ -24,8 +24,8 @@
             <span class="bar"></span>
         </label>
         <div>
-            <!--navigationbar-->
-                <div class="nave">
+             <!--navigationbar-->
+             <div class="nave">
                 <ul class="lis active">
                     <li class="naves">
                         <a class="nav-link" href="index.html">HOME</a>
@@ -44,12 +44,22 @@
                     </li>
                 </ul>
              </div>
-             <div class="repo">
-                <h1> Experience on Learning Basics of HTML</h1>
-            <p> At the starting I was very excited to learn and know about the basics of HTML and CSS. During the very beginning everything looked easy and I was very confident that I could do the works that uses HTML and CSS. But after doing one exercise or two I faced problems and I felt demotivated. I used to make very minor errors and get frustrated as I could not find where I made the mistake. Eventually after doing same thing over and over again I started getting back my confidence and also could catch the errors I made and eventually stopped making minor errors. I would not say it was easy to begin but I did cope up and now am confident that I can make a simple website and can tackle every problem I might be facing during the coding period. Finally, I would say that this experience has made me more patient and has improved my problem-solving skills. I learned many things and am looking forward to learning more. </p>
-            <h1> Reflective discussion of my module experience </h1>
-            <p> Talking about the module experience I would say it was exciting for me as everything I was doing was new and I really enjoyed it. Everything provided by the university and materials available in the college were really informative and useful to us. It helped me a lot when I started doing my assignments especially the slides and the exercises available with each topic. </p>
-              </div>
+        <div class="cont">
+            <h2>CONTACT US</h2>
+         <p> Feel free to leave any messege or thoughts about  you have.</p>
+        </div>
+     <div class="formm">
+        <form>
+           <div class="user"> 
+                <input type="text" id="name" required/><br/>                       
+                <label for="name">Your Name</label>
+                <input type="email" id="email" required/><br/>
+                <label for="email">Email</label>
+                <textarea id="messege" rows="5" required>Your Thoughts</textarea>
+                <button type="submit">Submit</button>
+            </div>
+        </form>
+    </div> 
     <div class="legs">
         <div class="contfom">
             <div class="continfo">
