--- a/portfolio.html
+++ b/portfolio.html
@@ -1,23 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>BLACK || LOVE  ||  PORTFOLIO</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        
-        
-        <link rel="stylesheet" href="bro.css">
-         <!--icons-->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" >
-    </head>
-    <body class="body">
-    <input type="checkbox" id="toggle">
 
+<head>
+    <meta charset="UTF-8">
+     <title>BLACK || LOVE  || HOME</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- CSS File -->
+    <link rel="stylesheet" href="bro.css">
+    <!--icons-->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" >
+
+</head>
+<body class="body">
+    <input type="checkbox" id="toggle">
     <nav>
-         <!--logo-->
-         <div class="log">
+        <!--logo-->
+        <div class="log">
             <img src="KARUNA.jpg" alt="logo">
         </div>
+
         <label class="navbar-toggler" for="toggle">
             <span class="bar"></span>
             <span class="bar"></span>
@@ -44,7 +45,6 @@
                     </li>
                 </ul>
              </div>
-        </div>
                 <div class="contact">
                     <div class="cass">
                             <div class="int">
