--- a/index.html
+++ b/index.html
@@ -2,25 +2,23 @@
 <html lang="en">
 
 <head>
-
+    <meta charset="UTF-8">
      <title>BLACK || LOVE  || HOME</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    
-
     <!-- CSS File -->
     <link rel="stylesheet" href="bro.css">
     <!--icons-->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" >
 
 </head>
-
 <body class="body">
-        <!--logo-->
-
     <input type="checkbox" id="toggle">
-
     <nav>
+        <!--logo-->
+        <div class="log">
+            <img src="KARUNA.jpg" alt="logo">
+        </div>
+
         <label class="navbar-toggler" for="toggle">
             <span class="bar"></span>
             <span class="bar"></span>
@@ -59,6 +57,8 @@
     </div>
                 </div>
             </div>
-        </div>   
+        </div>  
+        
+    </nav> 
     </body>  
 </html>
