--- a/sitereport.html
+++ b/sitereport.html
@@ -13,11 +13,13 @@
 </head>
 
 <body class="body">
-        <!--logo-->
-
-    <input type="checkbox" id="toggle">
+     <input type="checkbox" id="toggle">
 
     <nav>
+        <!--logo-->
+        <div class="log">
+            <img src="KARUNA.jpg" alt="logo">
+        </div>
         <label class="navbar-toggler" for="toggle">
             <span class="bar"></span>
             <span class="bar"></span>
@@ -50,6 +52,19 @@
             <h1> Reflective discussion of my module experience </h1>
             <p> Talking about the module experience I would say it was exciting for me as everything I was doing was new and I really enjoyed it. Everything provided by the university and materials available in the college were really informative and useful to us. It helped me a lot when I started doing my assignments especially the slides and the exercises available with each topic. </p>
               </div>
+              <div class="poj">
+                <img src="workexp.png" alt="" style="  height: 270px; width: 275px; margin: 20px;">
+             </div> 
+             <div class="by">  
+                 <img src="protfolio.png" alt="" style="  height: 270px; width: 275px; margin: 20px;">
+             </div> 
+             <div class="los">
+                 <img src="hij.jpg" alt="" style=" height: 270px; width: 275px; margin: 20px;"> 
+             </div>
+             <div class="hee">
+                 <img src="jkl.jpg" alt="" style=" height: 270px; width: 275px; margin: 20px;">
+             
+             </div>
     <div class="legs">
         <div class="contfom">
             <div class="continfo">
