--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
      <title>BLACK || LOVE  || CONTACT</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- CSS File -->
-    <link rel="stylesheet" href="bro.css">
+    <link rel="stylesheet" href="index.css">
     <!--icons-->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" >
 
