--- a/sitereport.html
+++ b/sitereport.html
@@ -6,7 +6,7 @@
      <title>BLACK || LOVE  || SITEREPORT</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- CSS File -->
-    <link rel="stylesheet" href="bro.css">
+    <link rel="stylesheet" href="index.css">
     <!--icons-->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" >
 
@@ -51,7 +51,9 @@
             <p> At the starting I was very excited to learn and know about the basics of HTML and CSS. During the very beginning everything looked easy and I was very confident that I could do the works that uses HTML and CSS. But after doing one exercise or two I faced problems and I felt demotivated. I used to make very minor errors and get frustrated as I could not find where I made the mistake. Eventually after doing same thing over and over again I started getting back my confidence and also could catch the errors I made and eventually stopped making minor errors. I would not say it was easy to begin but I did cope up and now am confident that I can make a simple website and can tackle every problem I might be facing during the coding period. Finally, I would say that this experience has made me more patient and has improved my problem-solving skills. I learned many things and am looking forward to learning more. </p>
             <h1> Reflective discussion of my module experience </h1>
             <p> Talking about the module experience I would say it was exciting for me as everything I was doing was new and I really enjoyed it. Everything provided by the university and materials available in the college were really informative and useful to us. It helped me a lot when I started doing my assignments especially the slides and the exercises available with each topic. </p>
-              </div>
+            <h1>Design Decisions</h1>
+            <p> At first I created a simple layout of the website and then add multiple features and different colors to it at first I could not decide many things from the colors to use to the features to add but eventually after trying many things I stopped at the things that really stick out to me and I completed my project. </p>
+                          </div>
               <div class="all"><p>VALIDATION</p>
               <div class="heeees"><p>index.html</p>
                 <img src="index.png" alt="" style="  height: 60vh; width: 100%; margin: 20px;">
