--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
              </div>
                <div class="camp">
                 <div class="intro">
-    <h2>WELCOME TO OUR WEBSITE</h2>
+    <h2>WELCOME TO MY WEBSITE</h2>
     <h3>A WEB DEVELOPER</h3>
     <h3>IF  YOU ARE CURIOUS ABOUT ME</h3>
-    <h3>AND MY WORK CLICK HERE</h3>
+    <h3>YOU CAN GO AND CHECK MY PORTFOLIO</h3>
                 </div>
             </div>
         </div>  
