--- a/sitereport.html
+++ b/sitereport.html
@@ -33,7 +33,7 @@
                         <a class="nav-link" href="index.html">HOME</a>
                     </li>
                     <li class="naves">
-                        <a class="nav-link" href="portfolio.html">POTFOLIO</a>
+                        <a class="nav-link" href="portfolio.html">PORTFOLIO</a>
                     </li>
                     <li class="naves">
                         <a class="nav-link" href="workexperience.html">WORKEXPERIENCE</a>
